# ever-sdk

./: .gitignore  Cargo.toml  README.md
ton_client/: Cargo.toml
ton_client_dart/: Cargo.toml  README.md  buildAndroid  buildiOS  cbindgen.toml  generate-header  generateheadler  headers.h  ios-xcframework  move_product
ton_client_dart/include/: module.modulemap  tonclient.h
ton_client_dart/src/: lib.rs
